; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_vp8_mc_msa.c_common_hz_6t_4x8_msa.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_vp8_mc_msa.c_common_hz_6t_4x8_msa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@mc_filt_mask_arr = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32*, i32, i32*)* @common_hz_6t_4x8_msa to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @common_hz_6t_4x8_msa(i32* %0, i32 %1, i32* %2, i32 %3, i32* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i64, align 8
  %19 = alloca i64, align 8
  %20 = alloca i64, align 8
  %21 = alloca i64, align 8
  %22 = alloca i32, align 4
  %23 = alloca i32, align 4
  %24 = alloca i32, align 4
  %25 = alloca i32, align 4
  %26 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32* %2, i32** %8, align 8
  store i32 %3, i32* %9, align 4
  store i32* %4, i32** %10, align 8
  %27 = load i32*, i32** @mc_filt_mask_arr, align 8
  %28 = getelementptr inbounds i32, i32* %27, i64 16
  %29 = call i64 @LD_UB(i32* %28)
  store i64 %29, i64* %18, align 8
  %30 = load i32*, i32** %6, align 8
  %31 = getelementptr inbounds i32, i32* %30, i64 -2
  store i32* %31, i32** %6, align 8
  %32 = load i32*, i32** %10, align 8
  %33 = call i32 @LD_SH(i32* %32)
  store i32 %33, i32* %22, align 4
  %34 = load i32, i32* %22, align 4
  %35 = load i32, i32* %15, align 4
  %36 = load i32, i32* %16, align 4
  %37 = load i32, i32* %17, align 4
  %38 = call i32 @SPLATI_H3_SB(i32 %34, i32 0, i32 1, i32 2, i32 %35, i32 %36, i32 %37)
  %39 = load i64, i64* %18, align 8
  %40 = add nsw i64 %39, 2
  store i64 %40, i64* %19, align 8
  %41 = load i64, i64* %18, align 8
  %42 = add nsw i64 %41, 4
  store i64 %42, i64* %20, align 8
  %43 = load i32*, i32** %6, align 8
  %44 = load i32, i32* %7, align 4
  %45 = load i32, i32* %11, align 4
  %46 = load i32, i32* %12, align 4
  %47 = load i32, i32* %13, align 4
  %48 = load i32, i32* %14, align 4
  %49 = call i32 @LD_SB4(i32* %43, i32 %44, i32 %45, i32 %46, i32 %47, i32 %48)
  %50 = load i32, i32* %11, align 4
  %51 = load i32, i32* %12, align 4
  %52 = load i32, i32* %13, align 4
  %53 = load i32, i32* %14, align 4
  %54 = call i32 @XORI_B4_128_SB(i32 %50, i32 %51, i32 %52, i32 %53)
  %55 = load i32, i32* %7, align 4
  %56 = mul nsw i32 4, %55
  %57 = load i32*, i32** %6, align 8
  %58 = sext i32 %56 to i64
  %59 = getelementptr inbounds i32, i32* %57, i64 %58
  store i32* %59, i32** %6, align 8
  %60 = load i32, i32* %11, align 4
  %61 = load i32, i32* %12, align 4
  %62 = load i32, i32* %13, align 4
  %63 = load i32, i32* %14, align 4
  %64 = load i64, i64* %18, align 8
  %65 = load i64, i64* %19, align 8
  %66 = load i64, i64* %20, align 8
  %67 = load i32, i32* %15, align 4
  %68 = load i32, i32* %16, align 4
  %69 = load i32, i32* %17, align 4
  %70 = load i32, i32* %23, align 4
  %71 = load i32, i32* %24, align 4
  %72 = call i32 @HORIZ_6TAP_4WID_4VECS_FILT(i32 %60, i32 %61, i32 %62, i32 %63, i64 %64, i64 %65, i64 %66, i32 %67, i32 %68, i32 %69, i32 %70, i32 %71)
  %73 = load i32*, i32** %6, align 8
  %74 = load i32, i32* %7, align 4
  %75 = load i32, i32* %11, align 4
  %76 = load i32, i32* %12, align 4
  %77 = load i32, i32* %13, align 4
  %78 = load i32, i32* %14, align 4
  %79 = call i32 @LD_SB4(i32* %73, i32 %74, i32 %75, i32 %76, i32 %77, i32 %78)
  %80 = load i32, i32* %11, align 4
  %81 = load i32, i32* %12, align 4
  %82 = load i32, i32* %13, align 4
  %83 = load i32, i32* %14, align 4
  %84 = call i32 @XORI_B4_128_SB(i32 %80, i32 %81, i32 %82, i32 %83)
  %85 = load i32, i32* %11, align 4
  %86 = load i32, i32* %12, align 4
  %87 = load i32, i32* %13, align 4
  %88 = load i32, i32* %14, align 4
  %89 = load i64, i64* %18, align 8
  %90 = load i64, i64* %19, align 8
  %91 = load i64, i64* %20, align 8
  %92 = load i32, i32* %15, align 4
  %93 = load i32, i32* %16, align 4
  %94 = load i32, i32* %17, align 4
  %95 = load i32, i32* %25, align 4
  %96 = load i32, i32* %26, align 4
  %97 = call i32 @HORIZ_6TAP_4WID_4VECS_FILT(i32 %85, i32 %86, i32 %87, i32 %88, i64 %89, i64 %90, i64 %91, i32 %92, i32 %93, i32 %94, i32 %95, i32 %96)
  %98 = load i32, i32* %23, align 4
  %99 = load i32, i32* %24, align 4
  %100 = load i32, i32* %25, align 4
  %101 = load i32, i32* %26, align 4
  %102 = call i32 @SRARI_H4_SH(i32 %98, i32 %99, i32 %100, i32 %101, i32 7)
  %103 = load i32, i32* %23, align 4
  %104 = load i32, i32* %24, align 4
  %105 = load i32, i32* %25, align 4
  %106 = load i32, i32* %26, align 4
  %107 = call i32 @SAT_SH4_SH(i32 %103, i32 %104, i32 %105, i32 %106, i32 7)
  %108 = load i32, i32* %23, align 4
  %109 = load i32, i32* %24, align 4
  %110 = call i64 @PCKEV_XORI128_UB(i32 %108, i32 %109)
  store i64 %110, i64* %21, align 8
  %111 = load i64, i64* %21, align 8
  %112 = load i32*, i32** %8, align 8
  %113 = load i32, i32* %9, align 4
  %114 = call i32 @ST_W4(i64 %111, i32 0, i32 1, i32 2, i32 3, i32* %112, i32 %113)
  %115 = load i32, i32* %25, align 4
  %116 = load i32, i32* %26, align 4
  %117 = call i64 @PCKEV_XORI128_UB(i32 %115, i32 %116)
  store i64 %117, i64* %21, align 8
  %118 = load i64, i64* %21, align 8
  %119 = load i32*, i32** %8, align 8
  %120 = load i32, i32* %9, align 4
  %121 = mul nsw i32 4, %120
  %122 = sext i32 %121 to i64
  %123 = getelementptr inbounds i32, i32* %119, i64 %122
  %124 = load i32, i32* %9, align 4
  %125 = call i32 @ST_W4(i64 %118, i32 0, i32 1, i32 2, i32 3, i32* %123, i32 %124)
  ret void
}

declare dso_local i64 @LD_UB(i32*) #1

declare dso_local i32 @LD_SH(i32*) #1

declare dso_local i32 @SPLATI_H3_SB(i32, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @LD_SB4(i32*, i32, i32, i32, i32, i32) #1

declare dso_local i32 @XORI_B4_128_SB(i32, i32, i32, i32) #1

declare dso_local i32 @HORIZ_6TAP_4WID_4VECS_FILT(i32, i32, i32, i32, i64, i64, i64, i32, i32, i32, i32, i32) #1

declare dso_local i32 @SRARI_H4_SH(i32, i32, i32, i32, i32) #1

declare dso_local i32 @SAT_SH4_SH(i32, i32, i32, i32, i32) #1

declare dso_local i64 @PCKEV_XORI128_UB(i32, i32) #1

declare dso_local i32 @ST_W4(i64, i32, i32, i32, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
